correccion color instalaciones

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1637,8 +1637,10 @@
 
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartPermisos)" [colors]="basicBarChartPermisos.colors"
                                                     [chart]="basicBarChartPermisos.chart" [dataLabels]="basicBarChartPermisos.dataLabels"
-                                                    [plotOptions]="basicBarChartPermisos.plotOptions" dir="ltr" dir="ltr"
-                                                    [xaxis]="basicBarChartPermisos.xaxis"></apx-chart>
+                                                    [plotOptions]="basicBarChartPermisos.plotOptions" dir="ltr"
+                                                    [xaxis]="basicBarChartPermisos.xaxis" [stroke]="basicBarChartPermisos.stroke"
+                                                    [fill]="basicBarChartPermisos.fill" [title]="basicBarChartPermisos.title"
+                                                    [tooltip]="basicBarChartPermisos.tooltip" [legend]="basicBarChartPermisos.legend"></apx-chart>
                                             
                                         </div>
                                     </div>
@@ -1652,8 +1654,10 @@
     
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartReportes)" [colors]="basicBarChartReportes.colors"
                                                         [chart]="basicBarChartReportes.chart" [dataLabels]="basicBarChartReportes.dataLabels"
-                                                        [plotOptions]="basicBarChartReportes.plotOptions" dir="ltr" dir="ltr"
-                                                        [xaxis]="basicBarChartReportes.xaxis"></apx-chart>
+                                                        [plotOptions]="basicBarChartReportes.plotOptions" dir="ltr" 
+                                                        [xaxis]="basicBarChartReportes.xaxis" [stroke]="basicBarChartReportes.stroke"
+                                                        [fill]="basicBarChartReportes.fill" [title]="basicBarChartReportes.title"
+                                                        [tooltip]="basicBarChartReportes.tooltip" [legend]="basicBarChartReportes.legend"></apx-chart>
                                                 
                                             </div>
                                         </div>
@@ -1671,8 +1675,10 @@
 
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartMonitoreos)" [colors]="basicBarChartMonitoreos.colors"
                                                     [chart]="basicBarChartMonitoreos.chart" [dataLabels]="basicBarChartMonitoreos.dataLabels"
-                                                    [plotOptions]="basicBarChartMonitoreos.plotOptions" dir="ltr" dir="ltr"
-                                                    [xaxis]="basicBarChartMonitoreos.xaxis"></apx-chart>
+                                                    [plotOptions]="basicBarChartMonitoreos.plotOptions" dir="ltr" 
+                                                    [xaxis]="basicBarChartMonitoreos.xaxis" [stroke]="basicBarChartMonitoreos.stroke"
+                                                    [fill]="basicBarChartMonitoreos.fill" [title]="basicBarChartMonitoreos.title"
+                                                    [tooltip]="basicBarChartMonitoreos.tooltip" [legend]="basicBarChartMonitoreos.legend"></apx-chart>
                                             
                                         </div>
                                     </div>
@@ -1686,8 +1692,10 @@
     
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartOtros)" [colors]="basicBarChartOtros.colors"
                                                         [chart]="basicBarChartOtros.chart" [dataLabels]="basicBarChartOtros.dataLabels"
-                                                        [plotOptions]="basicBarChartOtros.plotOptions" dir="ltr" dir="ltr"
-                                                        [xaxis]="basicBarChartOtros.xaxis"></apx-chart>
+                                                        [plotOptions]="basicBarChartOtros.plotOptions" dir="ltr"
+                                                        [xaxis]="basicBarChartOtros.xaxis"  [stroke]="basicBarChartOtros.stroke"
+                                                        [fill]="basicBarChartOtros.fill" [title]="basicBarChartOtros.title"
+                                                        [tooltip]="basicBarChartOtros.tooltip" [legend]="basicBarChartOtros.legend"></apx-chart>
                                                 
                                             </div>
                                         </div>
@@ -1765,8 +1773,10 @@
                                             <div>
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartGeneralInstallation)" [colors]="basicBarChartGeneralInstallation.colors"
                                                     [chart]="basicBarChartGeneralInstallation.chart" [dataLabels]="basicBarChartGeneralInstallation.dataLabels"
-                                                    [plotOptions]="basicBarChartGeneralInstallation.plotOptions" dir="ltr" dir="ltr"
-                                                    [xaxis]="basicBarChartGeneralInstallation.xaxis"></apx-chart>
+                                                    [plotOptions]="basicBarChartGeneralInstallation.plotOptions" dir="ltr"
+                                                    [xaxis]="basicBarChartGeneralInstallation.xaxis" [stroke]="basicBarChartGeneralInstallation.stroke"
+                                                    [fill]="basicBarChartGeneralInstallation.fill" [title]="basicBarChartGeneralInstallation.title"
+                                                    [tooltip]="basicBarChartGeneralInstallation.tooltip" [legend]="basicBarChartGeneralInstallation.legend"></apx-chart>
                                             </div>
                                         </div>
                                     </div>
@@ -1783,8 +1793,10 @@
 
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartPermisosInstallations)" [colors]="basicBarChartPermisosInstallations.colors"
                                                     [chart]="basicBarChartPermisosInstallations.chart" [dataLabels]="basicBarChartPermisosInstallations.dataLabels"
-                                                    [plotOptions]="basicBarChartPermisosInstallations.plotOptions" dir="ltr" dir="ltr"
-                                                    [xaxis]="basicBarChartPermisosInstallations.xaxis"></apx-chart>
+                                                    [plotOptions]="basicBarChartPermisosInstallations.plotOptions" dir="ltr" 
+                                                    [xaxis]="basicBarChartPermisosInstallations.xaxis" [stroke]="basicBarChartPermisosInstallations.stroke"
+                                                    [fill]="basicBarChartPermisosInstallations.fill" [title]="basicBarChartPermisosInstallations.title"
+                                                    [tooltip]="basicBarChartPermisosInstallations.tooltip" [legend]="basicBarChartPermisosInstallations.legend"></apx-chart>
                                             
                                         </div>
                                     </div>
@@ -1798,8 +1810,10 @@
     
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartReportesInstallations)" [colors]="basicBarChartReportesInstallations.colors"
                                                         [chart]="basicBarChartReportesInstallations.chart" [dataLabels]="basicBarChartReportesInstallations.dataLabels"
-                                                        [plotOptions]="basicBarChartReportesInstallations.plotOptions" dir="ltr" dir="ltr"
-                                                        [xaxis]="basicBarChartReportesInstallations.xaxis"></apx-chart>
+                                                        [plotOptions]="basicBarChartReportesInstallations.plotOptions" dir="ltr" 
+                                                        [xaxis]="basicBarChartReportesInstallations.xaxis" [stroke]="basicBarChartReportesInstallations.stroke"
+                                                        [fill]="basicBarChartReportesInstallations.fill" [title]="basicBarChartReportesInstallations.title"
+                                                        [tooltip]="basicBarChartReportesInstallations.tooltip" [legend]="basicBarChartReportesInstallations.legend"></apx-chart>
                                                 
                                             </div>
                                         </div>
@@ -1817,8 +1831,10 @@
 
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartMonitoreosInstallations)" [colors]="basicBarChartMonitoreosInstallations.colors"
                                                     [chart]="basicBarChartMonitoreosInstallations.chart" [dataLabels]="basicBarChartMonitoreosInstallations.dataLabels"
-                                                    [plotOptions]="basicBarChartMonitoreosInstallations.plotOptions" dir="ltr" dir="ltr"
-                                                    [xaxis]="basicBarChartMonitoreosInstallations.xaxis"></apx-chart>
+                                                    [plotOptions]="basicBarChartMonitoreosInstallations.plotOptions" dir="ltr" 
+                                                    [xaxis]="basicBarChartMonitoreosInstallations.xaxis" [stroke]="basicBarChartMonitoreosInstallations.stroke"
+                                                    [fill]="basicBarChartMonitoreosInstallations.fill" [title]="basicBarChartMonitoreosInstallations.title"
+                                                    [tooltip]="basicBarChartMonitoreosInstallations.tooltip" [legend]="basicBarChartMonitoreosInstallations.legend"></apx-chart>
                                             
                                         </div>
                                     </div>
@@ -1832,8 +1848,10 @@
     
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartOtrosInstallations)" [colors]="basicBarChartOtrosInstallations.colors"
                                                         [chart]="basicBarChartOtrosInstallations.chart" [dataLabels]="basicBarChartOtrosInstallations.dataLabels"
-                                                        [plotOptions]="basicBarChartOtrosInstallations.plotOptions" dir="ltr" dir="ltr"
-                                                        [xaxis]="basicBarChartOtrosInstallations.xaxis"></apx-chart>
+                                                        [plotOptions]="basicBarChartOtrosInstallations.plotOptions" dir="ltr" 
+                                                        [xaxis]="basicBarChartOtrosInstallations.xaxis" [stroke]="basicBarChartOtrosInstallations.stroke"
+                                                        [fill]="basicBarChartOtrosInstallations.fill" [title]="basicBarChartOtrosInstallations.title"
+                                                        [tooltip]="basicBarChartOtrosInstallations.tooltip" [legend]="basicBarChartOtrosInstallations.legend"></apx-chart>
                                                 
                                             </div>
                                         </div>
