--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -109,40 +109,70 @@
   <div style="min-height: 600px;">
     
     <div class="row text-center text-center align-items-center mb-4 justify-content-center">
-        <div class="col-xxl-2 col-lg-2" style="
-        margin-left: 30px;
-        margin-right: 30px;
-    ">
-            <div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('MA')}" (click)="setFilterAmbito('MA')">
-                Legislación ambiental
-            </div>
+        <div class="col-xxl-2 col-lg-2"><!-- style="
+            margin-left: 30px;
+            margin-right: 30px;
+        "-->
+            <!--<div class="div-texto" [ngClass]="{'div-texto-check texto-check': !ambito}" (click)="setFilterAmbito()">
+                Todos
+            </div>-->
+            
+            <button type="button" style="width: 100%;" class="btn bg-gradient waves-effect waves-light" [ngClass]="!ambito ? 'btn-primary' : 'btn-light'" (click)="setFilterAmbito()">Todos</button>
+        </div>
+        
+        <div class="col-xxl-2 col-lg-2"><!-- style="
+            margin-left: 30px;
+            margin-right: 30px;
+        "-->
+            <!--<div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('GENERAL')}" (click)="setFilterAmbito('GENERAL')">
+                Normativa general 
+            </div>-->
+            
+            <button type="button" style="width: 100%;" class="btn bg-gradient waves-effect waves-light" [ngClass]="validateFilter('GENERAL') ? 'btn-primary' : 'btn-light'" (click)="setFilterAmbito('GENERAL')">Normativa general</button>
+        </div>
+        
+        <div class="col-xxl-2 col-lg-2"><!-- style="
+            margin-left: 30px;
+            margin-right: 30px;
+        "-->
+            <!--<div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('MA')}" (click)="setFilterAmbito('MA')">
+                Normativa ambiental
+            </div>-->
+            
+            <button type="button" style="width: 100%;" class="btn bg-gradient waves-effect waves-light" [ngClass]="validateFilter('MA') ? 'btn-primary' : 'btn-light'" (click)="setFilterAmbito('MA')">Normativa ambiental</button>
         </div>
 
-        <div class="col-xxl-2 col-lg-2" style="
-        margin-left: 30px;
-        margin-right: 30px;
-    ">
-            <div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('SST')}" (click)="setFilterAmbito('SST')">
-                Legislación de Seguridad y Salud en el trabajo 
-            </div>
+        <div class="col-xxl-2 col-lg-2"><!-- style="
+            margin-left: 30px;
+            margin-right: 30px;
+        "-->
+            <!--<div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('SST')}" (click)="setFilterAmbito('SST')">
+                Normativa SST 
+            </div>-->
+            
+            <button type="button" style="width: 100%;" class="btn bg-gradient waves-effect waves-light" [ngClass]="validateFilter('SST') ? 'btn-primary' : 'btn-light'" (click)="setFilterAmbito('SST')">Normativa SST</button>
         </div>
         
-        <div class="col-xxl-2 col-lg-2" style="
-        margin-left: 30px;
-        margin-right: 30px;
-    ">
-            <div class="div-texto disabled">
-                Legislación laboral 
-            </div>
+        <div class="col-xxl-2 col-lg-2"><!-- style="
+            margin-left: 30px;
+            margin-right: 30px;
+        "-->
+            <!--<div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('LABORAL')}" (click)="setFilterAmbito('LABORAL')">disabled
+                Normativa laboral 
+            </div>-->
+            
+            <button type="button" style="width: 100%;" class="btn bg-gradient waves-effect waves-light" [ngClass]="validateFilter('LABORAL') ? 'btn-primary' : 'btn-light'" (click)="setFilterAmbito('LABORAL')">Normativa laboral</button>
         </div>
         
-        <div class="col-xxl-2 col-lg-2" style="
-        margin-left: 30px;
-        margin-right: 30px;
-    ">
-            <div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('ENERGIA')}" (click)="setFilterAmbito('ENERGIA')">
-                Legislación de energía 
-            </div>
+        <div class="col-xxl-2 col-lg-2"><!-- style="
+            margin-left: 30px;
+            margin-right: 30px;
+        "-->
+            <!--<div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('ENERGIA')}" (click)="setFilterAmbito('ENERGIA')">
+                Normativa de energía 
+            </div>-->
+            
+            <button type="button" style="width: 100%;" class="btn bg-gradient waves-effect waves-light" [ngClass]="validateFilter('ENERGIA') ? 'btn-primary' : 'btn-light'" (click)="setFilterAmbito('ENERGIA')">Normativa de energía</button>
         </div>
     </div>
   <div class="row">
