agregar otras obligaciones en filtro atributo

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -2027,6 +2027,8 @@
                                                 <a class="dropdown-item" [ngClass]="filtro_atributo && filtro_atributo == 'Reportes' ? 'active' : ''" href="javascript:void(0);" (click)="selectAtributoFiltro('Reportes')">Reportes</a>
                                                 
                                                 <a class="dropdown-item" [ngClass]="filtro_atributo && filtro_atributo == 'Monitoreos' ? 'active' : ''" href="javascript:void(0);" (click)="selectAtributoFiltro('Monitoreos')">Monitoreos</a>
+                                                
+                                                <a class="dropdown-item" [ngClass]="filtro_atributo && filtro_atributo == 'Otros' ? 'active' : ''" href="javascript:void(0);" (click)="selectAtributoFiltro('Otros')">Otras Obligaciones</a>
                                             </div>
                                         </div>
                 
